# omnilake

./: Dockerfile  LICENSE  README.md  app.py  dev.sh  pyproject.toml
.github/: CODEOWNERS
docs/: TROUBLESHOOTING.md
examples/: chain.py  chain_file.json  website_test.json
omnilake/api/: stack.py
omnilake/api/runtime/: api.py  archive.py  base.py  construct.py  entry.py  information.py  job.py  request.py  source.py
omnilake/cdk/: managed_policies.py
omnilake/client/: client.py  construct_request_definitions.py  fileutil.py  request_definitions.py  shell.py
omnilake/client/commands/: __init__.py  base.py  chain.py  index.py  question.py
omnilake/internal_lib/: ai.py  ai_insights.py  clients.py  event_definitions.py  exceptions.py  job_types.py  naming.py  secrets.py
omnilake/services/ai_statistics_collector/: stack.py
omnilake/services/ingestion/: stack.py
omnilake/services/raw_storage_manager/: stack.py
omnilake/services/reaper/: stack.py
omnilake/services/request_manager/: stack.py
omnilake/services/responder/: default_prompts.py  stack.py
omnilake/tables/archive_entries/: client.py  stack.py
omnilake/tables/archives/: client.py  stack.py
omnilake/tables/entries/: client.py  stack.py
omnilake/tables/indexed_entries/: client.py  stack.py
omnilake/tables/information_requests/: client.py  stack.py
omnilake/tables/jobs/: client.py  stack.py
omnilake/tables/lake_chain_requests/: client.py  stack.py
omnilake/tables/lake_requests/: client.py  stack.py
omnilake/tables/provisioned_archives/: client.py  stack.py
omnilake/tables/registered_request_constructs/: cdk.py  client.py  stack.py
(+127 files in other folders)
