[tool.poetry]
name = "omnilake"
version = "2025.1.1"
description = "Data Lake Capabilities combined with AI to create an AWS based Intelligence Lake"
authors = ["Jim Rosser <jim.rosser@caylent.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12" # Newer versions of Python don't have PyArrow wheel yet
lancedb = "^0.12.0"
boto3 = "^1.35.10"
da-vinci = { git = "https://github.com/jarosser06/da-vinci", develop = true, subdirectory = "da_vinci" }

[tool.poetry.group.dev.dependencies]
pypdf = "^5.1.0"
da-vinci-cdk = { git = "https://github.com/jarosser06/da-vinci", develop = true, subdirectory = "da_vinci-cdk" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
omni = "omnilake.client.shell:main"
